--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ Flask-SQLAlchemy==3.1.1
 google-ai-generativelanguage==0.3.3
 google-api-core==2.12.0
 google-auth==2.23.4
-google-generativeai==0.2.2
+google-generativeai<=0.2.2
 googleapis-common-protos==1.61.0
 greenlet==3.0.0
 grpcio==1.59.2
