--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ charset-normalizer==3.3.1
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.0
+flask-sitemapper
 Flask-SQLAlchemy==3.1.1
 google-ai-generativelanguage==0.3.3
 google-api-core==2.12.0
